src/minusic.css
@charset "UTF-8";
:root {
  --minusic-color-theme: #30b7ff;
  --minusic-color-buffer: #bbbbbb;
  --minusic-bg-range: #25282b;
  --minusic-bg-container: #3e4347;
  --minusic-text-primary: #fff;
  --minusic-text-secondary: #888;
  --minusic-hover-filter: brightness(0) saturate(100%) invert(58%) sepia(30%)
    saturate(2383%) hue-rotate(175deg) brightness(103%) contrast(101%);
}

.minusic-container {
  width: 100%;
  max-width: 800px;
  display: flex;
  flex-direction: column;
}

.minusic-controls {
  display: flex;
  align-items: center;
  min-width: 300px;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-size: 13px;
  height: 40px;
  background-color: var(--minusic-bg-container);
  order: 2;
  border-radius: 3px;
}

.minusic-menu {
  font-size: 0.75rem;
  position: relative;
}

.minusic-menu-value {
  background-color: transparent;
  border: none;
  padding: 5px 8px;
  cursor: pointer;
  color: #fff;
}
.minusic-menu-value::before {
  content: "x";
}

.minusic-menu-content {
  position: absolute;
  bottom: 100%;
  right: 0;
  padding: 5px 0;
  background-color: #fff;
  color: #222;
  margin-bottom: 10px;
  border-radius: 0.375rem;
  display: none;

  cursor: default;

  flex-direction: column;
  justify-content: space-between;
  align-items: stretch;
}
.minusic-menu-title {
  padding: 8px 10px;
  white-space: nowrap;
  text-transform: uppercase;
  color: #777;
}
.minusic-menu:focus .minusic-menu-content,
.minusic-menu-value:focus > .minusic-menu-content {
  display: flex;
}
.minusic-menu:focus-within .minusic-menu-content {
  display: flex;
}
.minusic-menu-item {
  padding: 12px 42px;
  background-color: transparent;
  border: none;
  display: block;
  cursor: pointer;
  text-align: left;
}
.minusic-menu-item:hover {
  /* background: #fafafa; */
}
.minusic-menu-value:focus,
.minusic-menu-item:focus {
  outline: solid var(--minusic-color-theme);
  outline-offset: 2px;
  outline-width: 3px;
  border-radius: 2px;
}
.minusic-menu-item-selected:hover {
  background-color: transparent;
}

.minusic-controls-button {
  background-color: transparent;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 1.2rem;
  border: none;
  width: 2.2rem;
  width: 32px;
  margin: 4px;
  height: 32px;
  box-sizing: border-box;
  cursor: pointer;
  border-radius: 3px;
}
.minusic-controls-button:hover,
.minusic-range-thumb:hover {
  filter: var(--minusic-hover-filter);
}

.minusic-controls-range {
  appearance: none;
  -webkit-appearance: none;
  box-sizing: border-box;
  height: 19px;
  padding: 5px 0;

  background: transparent;
  border: none;
  box-shadow: none;
  min-width: 0;
  width: 100%;
  display: block;
  border-radius: 10px;
}

.minusic-range {
  box-sizing: border-box;
  height: 19px;
  padding: 5px 8px;

  background: transparent;
  border: none;
  box-shadow: none;
  min-width: 0;
  width: 100%;
  border-radius: 10px;
  cursor: pointer;
}
.minusic-range:focus {
  appearance: none;
  box-shadow: none;
  outline: solid var(--minusic-color-theme);
  outline-offset: 2px;
  outline-width: 3px;
  border: none;
}
.minusic-range-background {
  height: 100%;
  border-radius: 10px;
  position: relative;
  background-color: var(--minusic-bg-range);
}
.minusic-range-progress {
  background-color: var(--minusic-color-theme);
  height: 100%;
  border-radius: 10px;
  width: 50%;
}
.minusic-range-thumb {
  background-color: #fff;
  width: 18px;
  height: 18px;
  border-radius: 50%;
  position: absolute;
  inset: 0 0 0 50%;
  margin: auto auto auto -9px;
}
.minusic-circular-range {
  position: absolute;
  right: 50px;
  bottom: 10px;
  max-width: 240px !important;
}
.minusic-circular-range-background {
  fill: none;
  stroke: transparent;
  stroke-linecap: round;
}
.minusic-circular-range-progress {
  cursor: pointer;
  fill: none;
  stroke-linecap: round;
  stroke: var(--minusic-color-theme);
}
.minusic-circular-range-thumb {
  fill: #fff;
  stroke: none;
}
.minusic-circular-range-thumb:focus {
  appearance: none;
  box-shadow: none;
  outline: solid var(--minusic-color-theme);
  outline-offset: 2px;
  outline-width: 3px;
  border: none;
  border-radius: 100%;
}
.minusic-circular-progress {
  position: absolute;
  right: 50px;
  bottom: 10px;
  max-width: 240px !important;

  inset: 0;
  margin: auto;
}
.minusic-circular-progress-background {
  fill: none;
  stroke: var(--minusic-bg-range);
  stroke-linecap: round;
}
.minusic-circular-progress-bar {
  stroke: var(--minusic-color-buffer);
  fill: none;
  stroke-linecap: round;
  /* stroke: #eeeeee; */
}

.minusic-progress {
  width: 100%;

  box-sizing: border-box;
  height: 9px;
  margin: 0 8px;
  border-radius: 10px;
  overflow: hidden;
  background-color: var(--minusic-bg-range);
}
.minusic-progress-bar {
  background-color: var(--minusic-color-buffer);
  width: 0%;
  height: 100%;
  position: relative;
  border-radius: 10px;
}

.minusic-progress-container {
  display: flex;
  flex: 1;
  position: relative;
  width: 100%;
  height: 2.2rem;
}

.minusic-controls-buffer-bar {
}

.minusic-controls-seek-bar {
  position: absolute;
  inset: 0 0;
  z-index: 1;
  margin: auto;
}
.minusic-controls-seek-bar .minusic-range-background {
  background: transparent;
}

.minnusic-controls-total-time:before {
  content: "/";
  margin: 0 4px 0 2px;
}

.minusic-controls-play-button {
  order: 1;
}
.minusic-progress-container {
  order: 2;
  flex: 1;
  display: flex;
  align-items: center;
  min-width: 60px;
}
.minnusic-controls-current-time {
  order: 3;
  color: var(--minusic-text-primary);
  font-size: 12px;
  padding: 0 6px 0 12px;
  letter-spacing: -0.5px;
  user-select: none;
}
.minnusic-controls-total-time {
  order: 4;
  color: var(--minusic-text-secondary);
  font-size: 12px;
  user-select: none;
}
.minusic-controls-mute-button {
  order: 5;
}
.minusic-controls-sound-bar {
  width: 100%;
  order: 6;
  flex: 1;
  margin-right: 10px;
  max-width: 75px;
  box-sizing: border-box;
  /* background-color: var(--minusic-bg-range); */
}

.minusic-visualizer {
  order: 1;
}

.minusic-metadata {
  display: grid;
  grid-template-columns: 90px 3fr;
  grid-template-rows: repeat(3, 1fr);
  grid-column-gap: 10px;
  grid-row-gap: 0px;
  order: 3;
  padding: 20px;
  background: #fff;
  margin-top: 20px;
  border-radius: 3px;
}

.minusic-metadata p {
  margin: 0;
}

.minnusic-meta-title {
  grid-area: 1 / 2 / 2 / 3;
  font-size: 1.2rem;
  font-weight: 600;
  color: #101010;
}
.minnusic-meta-author {
  grid-area: 2 / 2 / 3 / 3;
  font-size: 1rem;
  color: var(--minusic-text-secondary);
}
.minnusic-meta-album {
  grid-area: 3 / 2 / 4 / 3;
}
.minnusic-meta-thumbnail {
  display: block;
  width: 100%;
  grid-area: 1 / 1 / 4 / 2;
}

